# wastd

./: .gitignore  Dockerfile  README.md  business_analysts.html  data_consumers.html  data_entry.html  data_qa.html  developers.html  genindex.html  index.html  pyproject.toml  search.html  searchindex.js  third_party_access.html
.github/workflows/: docs_pages.yml  image-build-scan.yml  multi-build.yaml  run-tests.yml
kustomize/overlays/prod/: kustomization.yaml
kustomize/overlays/prod/cronjobs/download-odk/: patch.yaml
wamtram2/: forms.py  models.py  views.py
wamtram2/scripts/: change_date_format.sql  copy_time.sql  turtle_tagging.schema.sql
wamtram2/templates/wamtram2/: export_form.html
wastd/: settings.py
