[project]
name = "wastd"
version = "2.1.9"
description = "Western Australian Sea Turtles Database"
authors = [
  { name = "Florian Mayer", email = "florian.mayer@dbca.wa.gov.au" },
  { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
  { name = "Evan Hallein", email = "evan.hallein@dbca.wa.gov.au" },
  { name = "Rick Wang", email = "rick.wang@dbca.wa.gov.au" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
  "django (==4.2.23)",
  "psycopg[binary,pool]==3.2.5",
  "dbca-utils==2.0.3",
  "django-extensions==3.2.3",
  "python-dotenv==1.0.1",
  "dj-database-url==2.3.0",
  "gunicorn==23.0.0",
  "python-dateutil==2.9.0.post0",
  "django-fsm==2.8.1",
  "django-fsm-log==3.1.0",
  "django-fsm-admin-maintained==1.2.6",
  "python-slugify==8.0.4",
  "django-filter==24.1",
  "django-polymorphic==3.1.0", # TODO: deprecate
  "setuptools>=77.0.1", # Required for django-polymorphic
  "django-reversion==5.0.12",
  "django-crispy-forms==1.14.0",
  "xmltodict==0.13.0",
  "pandas==2.2.0",
  "django-tables2==2.7.0",
  "django-select2==8.0.0",
  "django-geojson==4.0.0",
  "django-import-export==3.3.7",
  "django-export-download==0.2.3",
  "pillow==10.3.0",
  "whitenoise[brotli]==6.9.0",
  "phonenumbers==9.0.1",
  "django-phonenumber-field==7.3.0",
  "mssql-django==1.4.1",
  "webtemplate-dbca==1.5.1",
  "django-storages[azure]==1.14.5",
  "django-map-widgets==0.4.2",
  "django-nested-admin==4.0.2",
  "django-grappelli==3.0.8",
  "django-bootstrap4==24.1",
  "django-easy-select2==1.5.8",
  "sentry-sdk[django]==2.22.0",
  "python-docx==1.1.2",
]

[dependency-groups]
dev = [
  "ipython>=8.31.0",
  "ipdb>=0.13.13",
  "pre-commit>=4.0.1",
  "coverage>=7.6.12",
  "vulture>=2.14",
  "sphinx>=8.2.0",
  "django-debug-toolbar>=5.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]
exclude = ["__pycache__", "migrations"]
